# F-Spot-Album-Exporter

./: F-Spot.sln  configure.ac
data/: addin-xml-strings.cs
src/Clients/MainApp/: MainApp.csproj
src/Core/FSpot.Core/: FSpot.Core.csproj
src/Core/FSpot.Gui/: FSpot.Gui.csproj
src/Core/FSpot.Utils/: FSpot.Utils.csproj
src/Extensions/Exporters/: Makefile.am
src/Extensions/Exporters/FSpot.Exporters.Album/: FSpot.Exporters.Album.csproj  Makefile.am
src/Extensions/Exporters/FSpot.Exporters.Album/FSpot.Exporters.Album/: AlbumExport.cs
src/Extensions/Exporters/FSpot.Exporters.Album/Resources/: AlbumExport.addin.xml  album_exporter.ui
src/Extensions/Exporters/FSpot.Exporters.Album/Resources/DefaultTheme/: album.css  album.js  dark.css  index.xsl  light.css  page.xsl
src/Extensions/Exporters/FSpot.Exporters.Facebook/: FSpot.Exporters.Facebook.csproj
src/Extensions/Exporters/FSpot.Exporters.Flickr/: FSpot.Exporters.Flickr.csproj
src/Extensions/Exporters/FSpot.Exporters.Gallery/: FSpot.Exporters.Gallery.csproj
src/Extensions/Exporters/FSpot.Exporters.Tabblo/: FSpot.Exporters.Tabblo.csproj
src/Extensions/Tools/FSpot.Tools.ChangePhotoPath/: FSpot.Tools.ChangePhotoPath.csproj
