ASSEMBLY = FSpot.Exporters.Album
TARGET = library
LINK = $(REF_FSPOT_EXTENSION_ALBUMEXPORT)
INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)

SOURCES = FSpot.Exporters.Album/AlbumExport.cs

RESOURCES = Resources/AlbumExport.addin.xml \
            Resources/album_exporter.ui

include $(top_srcdir)/build/build.mk
